Fix: Change cat. ResultsContainer to flex w/ wrap

--- a/src/pages/Category/Category.module.scss
+++ b/src/pages/Category/Category.module.scss
@@ -2,6 +2,8 @@
   overflow-y: auto;
   overflow-x: hidden;
   height: 580px;
+  display: flex;
+  flex-direction: column;
 
   & .Title {
     font-size: 18px;
@@ -11,9 +13,10 @@
   }
 
   & .ResultsContainer {
-    display: grid;
+    display: flex;
+    flex-wrap: wrap;
     gap: 20px;
-    grid-template-columns: repeat(4, 1fr);
+    align-self: center;
   }
 
   & .NoResults {
